--- a/coding.ipynb
+++ b/coding.ipynb
@@ -531,42 +531,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[107.2087328]\n"
+      "[10243.89668408]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\llm\\coding-assistant\\.venv\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "d:\\llm\\coding-assistant\\.venv\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "import pandas\n",
-    "from sklearn import linear_model\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scale = StandardScaler()\n",
-    "\n",
-    "df = pandas.read_csv(\"data.csv\")\n",
-    "\n",
-    "X = df[['Weight', 'Volume']]\n",
-    "\n",
-    "scaledX = scale.fit_transform(X)\n",
-    "\n",
-    "regr = linear_model.LinearRegression()\n",
-    "regr.fit(scaledX, y)\n",
-    "\n",
-    "scaled = scale.transform([[2300, 1.3]])\n",
-    "predicted = regr.predict([scaled[0]])\n",
+    "predicted = regr.predict([[2300, 1300]])\n",
     "print(predicted)\n"
    ]
   },
