--- a/coding.ipynb
+++ b/coding.ipynb
@@ -572,11 +572,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
-    "hello"
+    "print(\"hello\")"
    ]
   }
  ],
