--- a/coding.ipynb
+++ b/coding.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from scipy import stats"
+    "from scipy import stats from main"
    ]
   },
   {
